<com.boroscsaba.commonlibrary.views.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff00"
    app:styleName="TIMER_PAGE">

    <com.boroscsaba.fastinglifestyletimerandtracker.Timer
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/timerButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/timerButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/AdContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer">

        <TextView
            android:id="@+id/startDescription"
            android:text="@string/start_description"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/start_eating_window"
            android:textColor="#333333"
            android:background="#ffffff"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/timeCounterEdit"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timeCounter"
                android:textSize="28sp"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:padding="8dp"
                android:src="@drawable/ic_edit_black_48dp"
                android:tint="#ffffff"
                android:contentDescription="@string/edit"/>

        </LinearLayout>

        <TextView
            android:id="@+id/timeCounterDescription"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/timer_description"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/stopButton"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/stop"
            android:textColor="#333333"
            android:background="#ffffff"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/AdContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</com.boroscsaba.commonlibrary.views.ConstraintLayout>